# daimon

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.it.md  README.md  SECURITY.md  daimon_chain.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
daimon/: __init__.py  cli.py  config.py  demo.py  explorer.py  store.py
daimon/core/: __init__.py  chain.py  crypto.py  minds.py  state.py  tx.py
daimon/network/: __init__.py  client.py  demo_p2p.py  node.py  protocol.py
deploy/: daimon-node.service  setup_vps.sh
tests/: test_cli.py  test_consensus.py  test_explorer.py  test_network.py  test_persistence.py  test_security.py
