[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daimon"
version = "0.3.0"
description = "A pure-Python Layer-1 blockchain where AI agents are native protocol primitives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "stoneproof-tech" }]
dependencies = ["ecdsa>=0.19"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
daimon = "daimon.cli:main"
daimon-demo = "daimon.demo:demo"
daimon-explorer = "daimon.explorer:main"

[tool.setuptools.packages.find]
include = ["daimon*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
